# MonoObsLog2

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  SIMBAD_INTEGRATION.md  ai.md  resources.qrc  vcpkg.json
data/: constellations.csv
images/: resources.rc
include/: ER.h  abouttab.h  astrocalc.h  filtertypestab.h  mainwindow.h  monthlystatstab.h  numerictablewidgetitem.h  objectsrepository.h  objectstab.h  objectstatstab.h  observationstab.h  sessionstab.h  settingsmanager.h  simbadquery.h
include/db/: camerasrepository.h  databasebackup.h  databasemanager.h  filtersrepository.h  filtertypesrepository.h  objectsrepository.h  observationsrepository.h  sessionsrepository.h  telescopesrepository.h
include/tabs/: abouttab.h  camerastab.h  filterstab.h  filtertypestab.h  monthlystatstab.h  objectstab.h  objectstatstab.h  observationstab.h  sessionstab.h  settingstab.h  telescopestab.h
src/: abouttab.cpp  astrocalc.cpp  camerastab.cpp  databasemanager.cpp  filterstab.cpp  filtertypestab.cpp  main.cpp  mainwindow.cpp  monthlystatstab.cpp  objectsrepository.cpp  objectstab.cpp  objectstatstab.cpp  observationstab.cpp  sessionstab.cpp  settingsmanager.cpp  settingstab.cpp  simbadquery.cpp  telescopestab.cpp
src/db/: camerasrepository.cpp  databasebackup.cpp  databasemanager.cpp  filtersrepository.cpp  filtertypesrepository.cpp  objectsrepository.cpp  observationsrepository.cpp  sessionsrepository.cpp  telescopesrepository.cpp
src/tabs/: abouttab.cpp  camerastab.cpp  filterstab.cpp  filtertypestab.cpp  monthlystatstab.cpp  objectstab.cpp  objectstatstab.cpp  observationstab.cpp  sessionstab.cpp  settingstab.cpp  telescopestab.cpp
templates/: observations_export.html
uifiles/: about_tab.ui  abouttab.ui  cameras_tab.ui  camerastab.ui  filters_tab.ui  filterstab.ui  filtertypes_tab.ui  filtertypestab.ui  mainwindow.ui  monthlystats_tab.ui  monthlystatstab.ui  objects_tab.ui  objectstab.ui  objectstats_tab.ui  objectstatstab.ui  observations_tab.ui  observationstab.ui  sessions_tab.ui  sessionstab.ui  settings_tab.ui  settingstab.ui  telescopes_tab.ui  telescopestab.ui
